refactor: update package structure and improve DTO usage